# opengl-demo

./: .env.cmake  .gitignore  CMakeLists.txt  README.md
build_helpers/: build.bat  build.sh
includes/glad/include/glad/: glad.h
includes/glad/src/: glad.c
includes/stb/includes/stb/: stb_image.h
src/: main.cpp
src/assets/json/: texture_mapping.json  texture_mapping_old.json
src/assets/shader/: ambient.comp  block.frag  block.geom  block.vert  default.frag  default.vert  neighbor.comp  ortho.frag  ortho.vert
src/craft/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  coordinate.cpp  coordinate.hpp  entity.cpp  entity.hpp  player.cpp  player.hpp  textures.cpp  textures.hpp  types.cpp  types.hpp  world.cpp  world.hpp
src/craft/entities/: entity.cpp  entity.hpp  player.cpp  player.hpp
src/craft/misc/: coordinate.hpp  crossHair.cpp  crossHair.hpp  globals.hpp  textures.cpp  textures.hpp  types.hpp
src/craft/weather/: sun.cpp  sun.hpp
src/craft/worldGeneration/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  world.cpp  world.hpp
src/helpers/: helpers.cpp  helpers.hpp  noise.cpp  noise.hpp  stb_image.cpp  threadPool.hpp  timer.cpp  timer.hpp
src/setup/: app.cpp  app.hpp  camera.cpp  camera.hpp  compute.cpp  compute.hpp  program.cpp  program.hpp  window.cpp  window.hpp
src/shader/: default.frag  default.geom  default.vert
src/shapes/: cube.cpp  cube.hpp  shape.cpp  shape.hpp
